--- a/www/css/style.css
+++ b/www/css/style.css
@@ -18,6 +18,28 @@ input {
   line-height: 1.4;
   padding: 8px;
 }
+
+/* Reset ios default style*/
+input[type="submit"],
+input[type="button"] {
+  border-radius: 0;
+  -webkit-box-sizing: content-box;
+  -webkit-appearance: button;
+  appearance: button;
+  border: none;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+input[type="submit"]::-webkit-search-decoration,
+input[type="button"]::-webkit-search-decoration {
+  display: none;
+}
+input[type="submit"]::focus,
+input[type="button"]::focus {
+  outline-offset: -2px;
+}
+
+/* class */
 .center {
   text-align: center;
 }
@@ -62,11 +84,11 @@ input {
   cursor: pointer;
   overflow: hidden;
   vertical-align: middle;
-  border-radius: .3em;
+  border-radius: 5px;
   min-width: 80%;
   box-shadow: 0 2px 0 #9a9a99;
   box-sizing: border-box;
-  // transition: all .25s;
+  /* transition: all .25s; */
 }
 .btn:active {
   top: 3px;
