--- a/www/css/style.css
+++ b/www/css/style.css
@@ -4,7 +4,7 @@ html {
 body {
   color: #2f3131;
   font-family: Verdana, sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.6rem;
   line-height: 1.6;
   background-color: #f8f1e5;
   padding-top: 20px;
@@ -102,4 +102,21 @@ input[type="button"]::focus {
 .submitBtn:active {
   background-color: #4F85A5;
   box-shadow: 0 -1px 0px #426e86;
+}
+
+/* Layout */
+.header {
+  position: relative;
+  color: #f8f1e5;
+  background-color: #2f3131;
+  margin: 0;
+  padding: 0 30px;
+}
+.header nav {
+  text-align: right;
+}
+
+/* game */
+#mycanvas {
+  margin: 10px auto;
 }
