--- a/www/css/style.css
+++ b/www/css/style.css
@@ -6,7 +6,7 @@ body {
   font-family: Verdana, sans-serif;
   font-size: 1.6rem;
   line-height: 1.6;
-  background-color: #f8f1e5;
+  background-color: rgb(248, 249, 250);
   padding-top: 20px;
 }
 form {
@@ -18,7 +18,10 @@ input {
   line-height: 1.4;
   padding: 8px;
 }
-
+table {
+  border-spacing: 0;
+  border-collapse: collapse;
+}
 /* Reset ios default style*/
 input[type="submit"],
 input[type="button"] {
@@ -135,15 +138,48 @@ h6 { font-size: 1.2rem; }
 }
 
 /* lanking */
+.ranking {
+  background-color: rgb(248, 249, 250);
+  width: 100%;
+}
 .ranking .heading {
-  border-bottom: 1px solid #2f3131;
+  color: #488a99;
+  margin-bottom: 0;
+  /* border-bottom: 1px solid #dbae58; */
 }
-.rankingList {
-  font-size: 1.8rem;
-  list-style: none;
-  margin: 0;
-  padding: 0;
+.rankingTable {
+  border-bottom: 1px solid #b4b4b4;
+  box-sizing: border-box;
+  width: 100%;
 }
-.rankingList > li {
-  padding: 0 0 7px;
+.rankingTable th,
+.rankingTable td {
+  padding: 2px 5px;
+  vertical-align: top;
+}
+.rankingTable th {
+  color: #dbae58;
+  font-size: 1.2rem;
+  font-weight: normal;
+  text-align: center;
+}
+.rankingTable td {
+  color: #3a424c;
+  font-size: 1.4rem;
+  border-top: 1px solid #565251;
+}
+.rankingTable>tbody>tr:nth-of-type(odd) {
+  background-color: rgb(239, 241, 243);
+}
+
+.rankingTable .rank {
+  text-align: center;
+  padding-left: 10px;
+}
+.rankingTable .score {
+  text-align: right;
+  padding-right: 30px;
+}
+.rankingTable tbody .score {
+  font-style: italic;
 }
