--- a/www/css/style.css
+++ b/www/css/style.css
@@ -22,6 +22,17 @@ table {
   border-spacing: 0;
   border-collapse: collapse;
 }
+.table {
+  box-sizing: border-box;
+  width: 100%;
+}
+.table th,
+.table td {
+  padding: 2px 5px;
+  vertical-align: top;
+  box-sizing: border-box;
+}
+
 /* Reset ios default style*/
 input[type="submit"],
 input[type="button"] {
@@ -137,6 +148,23 @@ h6 { font-size: 1.2rem; }
   margin: 10px auto;
 }
 
+/* score */
+.scoresTable {
+  color: #3a424c;
+  font-size: 1.4rem;
+  border-bottom: 1px solid #3a424c;
+}
+.scoresTable td {
+  text-align: left;
+  width: 33.333%;
+}
+.scoresTable td.n1 {
+  padding-left: 20px;
+}
+.scoresTable td.n3 {
+  padding-right: 20px;
+}
+
 /* lanking */
 .ranking {
   background-color: rgb(248, 249, 250);
@@ -149,13 +177,6 @@ h6 { font-size: 1.2rem; }
 }
 .rankingTable {
   border-bottom: 1px solid #b4b4b4;
-  box-sizing: border-box;
-  width: 100%;
-}
-.rankingTable th,
-.rankingTable td {
-  padding: 2px 5px;
-  vertical-align: top;
 }
 .rankingTable th {
   color: #dbae58;
